***********************************
CHANGES IN VERSION 0.1.0

NEW FEATURES

   o Add saturation curves

   o Strandness is now automatically detected before mapping if STRANDED is not set

   o Generate Index of BAM files

SIGNIFICANT USER-VISIBLE CHANGES

   o Deal with non Human/Mouse references, and no gene_type information

   o Add --sjdbOverhang from STAR in the config file

   o FastQC step is not optional

   o Update logs reporting for clority reasons

   o Change default config file for STAR option / R path

   o Back to zcat command for gzip file during STAR mapping

   o makeRNAreport now requires the SAMPLE_PLAN to deal with biological ids

   o Change annotation plot visualization and add the count table

   o Fix bugs in sample names in report

   o Remove links to HTML report

BUG FIXES

   o Remove emply line from SAMPLE_PLAN

   o Fix bug in report regarding sample names

   o Fix bug in report.html in annotation table


***********************************
CHANGES IN VERSION 0.0.9

HOTFIX

   o  Fix bug in HTML report

***********************************
CHANGES IN VERSION 0.0.8

HOTFIX

   o  Fix bug to support other annotation/species. Tested on Drosophila


***********************************
CHANGES IN VERSION 0.0.6

NEW FEATURES

   o Add option -v to RNApip_cluster

BUG FIXES

   o Improve genes annotation in report and deal with specific cases

   o Fix bug in report.html (issue #14)


***********************************
CHANGES IN VERSION 0.0.5

BUG FIXES

   o Fix bug in report.html (issue #14)


***********************************
CHANGES IN VERSION 0.0.4

NEW FEATURES

   o Add option -n to makeRNAreport to specify the run ID

SIGNIFICANT USER-VISIBLE CHANGES

   o Add standalone folder for production compatibility

   o Add test-op folder

   o Counts are always generated with gene_id. These IDs are then converted into gene_name regardless the countinh method
